# plugrs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: pre-release-check.yml  release.yml
.hooks/: post-commit  pre-commit
crates/plugin-host/: Cargo.toml  README.md
crates/plugin-host/src/: lib.rs  main.rs  plugin_loader.rs
crates/plugin-interface/: CHANGELOG.md  Cargo.toml  README.md
crates/plugin-macros/: Cargo.toml  README.md
crates/plugin-macros/src/: lib.rs
crates/plugins/example-plugin/: Cargo.toml
crates/plugins/example-plugin/src/: lib.rs
crates/plugins/file-handler/: Cargo.toml
crates/plugins/file-handler/src/: lib.rs
crates/plugrs/: CHANGELOG.md  Cargo.toml  README.md
crates/plugrs-host/: CHANGELOG.md  Cargo.toml  README.md
crates/plugrs-host/src/: lib.rs  main.rs  plugin_loader.rs
crates/plugrs-interface/: CHANGELOG.md  Cargo.toml  README.md
crates/plugrs-interface/src/: lib.rs
crates/plugrs-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/plugrs/src/: lib.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
plugins/file-handler/: Cargo.toml
plugins/file-handler/src/: lib.rs
scripts/: setup.sh
