[package]
name = "plugin-host"
version = "0.1.0"
edition = "2021"
description = "Plugin host implementation for the plugrs system"
license = "MIT"
repository = "https://github.com/Lydanne/plugrs"
documentation = "https://docs.rs/plugin-host"
readme = "README.md"
keywords = ["plugin", "host", "dynamic-loading"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "plugin_host"
path = "src/lib.rs"

[dependencies]
plugin-interface = { version = "^0.1.0", path = "../plugin-interface" }
libloading = "0.7"
