[package]
name = "plugrs-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the plugrs plugin system"
license = "MIT"
repository = "https://github.com/Lydanne/plugrs"
documentation = "https://docs.rs/plugrs-macros"
readme = "README.md"
keywords = ["plugin", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
plugrs-interface = { version = "^0.1.0", path = "../plugrs-interface" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
